[project]
name = "interp-project"
version = "0.2.0"
description = "VPD (adVersarial Parameter Decomposition) applied to SmolVLM-256M"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal",
    "torch",
    "transformers>=4.51",
    "accelerate",
    "datasets",
    "pillow",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "torchvision>=0.27.0",
    "umap-learn>=0.5.12",
    "plotly>=6.7.0",
]

[tool.uv]
package = false
